--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -7,6 +7,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta name="renderer" content="webkit"/>
   <link rel="shortcut icon" href="/public/website/favicon.ico">
+  <script src="/static/MathJax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script>
+    MathJax.Hub.Config({
+    showProcessingMessages: false,
+    messageStyle: "none",
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','a'],
+        ignoreClass:"markdown-editor"
+    },
+    "HTML-CSS": {
+        availableFonts: ["STIX","TeX"],
+        showMathMenu: false
+    }
+  });
+  MathJax.Hub.Queue(["Typeset",MathJax.Hub]);
+  </script>
 </head>
 <body>
 <div id="app"></div>
