add mathjax for admin,increase problem list column width

--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -17,8 +17,7 @@
     tex2jax: {
         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
         displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','a'],
-        ignoreClass:"markdown-editor"
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','a']
     },
     "HTML-CSS": {
         availableFonts: ["STIX","TeX"],
